# sinoduplex

./: .gitignore  CMakeLists.txt  README.md  install_sinoduplex.sh  make_ref_data.sh  reference-data.txt
src/: BamAlignment.cc  BamAlignment.h  CMakeLists.txt  Cigar.cc  Cigar.h  CigarRoller.cc  CigarRoller.h  Duplex_Consensus.cc  Duplex_Consensus.h  Logger.cc  Logger.h  SamFlag.h  SinoExecutable.cc  SinoExecutable.h  installdir.h  nibtools.h  sinoduplex.cc  sinoduplex.h  sintools.cc  tailTrimFq.cc  tailTrimFq.h  trimFq.cc  trimFq.h  util_bam.cc  util_bam.h  util_string.cc  util_string.h
